--- a/res/values-ml/strings.xml
+++ b/res/values-ml/strings.xml
@@ -825,7 +825,7 @@
     <string name="bluetooth_error_title" msgid="2284738188253690278"></string>
     <string name="bluetooth_connecting_error_message" msgid="3941893154784152112">"<xliff:g id="DEVICE_NAME">%1$s</xliff:g> എന്നതിലേക്ക് കണക്റ്റുചെയ്യാനായില്ല."</string>
     <string name="bluetooth_preference_scan_title" msgid="3460316252463771851">"ഉപകരണങ്ങൾക്കായി സ്‌കാൻ ചെയ്യുക"</string>
-    <string name="bluetooth_search_for_devices" msgid="6516902340975407648">"പുതുക്കുക"</string>
+    <string name="bluetooth_search_for_devices" msgid="6516902340975407648">"റീഫ്രഷ് ചെയ്യുക"</string>
     <string name="bluetooth_searching_for_devices" msgid="6541984133657573124">"തിരയുന്നു..."</string>
     <string name="bluetooth_preference_device_settings" msgid="1688662188157019998">"ഉപകരണ ക്രമീകരണങ്ങൾ"</string>
     <string name="bluetooth_preference_paired_dialog_title" msgid="1090131276572055841">"ജോടിയാക്കിയ ഉപകരണം"</string>
@@ -2282,7 +2282,7 @@
     <string name="feature_flags_dashboard_title" msgid="348990373716658289">"ഫീച്ചർ ഫ്ലാഗുകൾ"</string>
     <string name="talkback_title" msgid="8756080454514251327">"TalkBack"</string>
     <string name="talkback_summary" msgid="5820927220378864281">"പ്രധാനമായും അന്ധർക്കും കാഴ്‍ചശക്തി കുറഞ്ഞവർക്കുമുള്ളതാണ് സ്ക്രീൻ റീഡർ"</string>
-    <string name="select_to_speak_summary" msgid="1995285446766920925">"നിങ്ങളുടെ സ്ക്രീനിലെ ഇനങ്ങൾ ഉറക്കെ വായിക്കുന്നത് കേൾക്കാൻ അവയിൽ ടാപ്പ് ചെയ്യുക"</string>
+    <string name="select_to_speak_summary" msgid="1995285446766920925">"നിങ്ങളുടെ സ്ക്രീനിലെ ഇനങ്ങൾ ഉറക്കെ വായിച്ചുകേൾക്കാൻ അവയിൽ ടാപ്പ് ചെയ്യുക"</string>
     <string name="accessibility_captioning_title" msgid="4561871958958925225">"അടിക്കുറിപ്പ് മുൻഗണനകൾ"</string>
     <string name="accessibility_captioning_about_title" msgid="3542171637334191563">"അടിക്കുറിപ്പ് മുൻഗണനകളെ കുറിച്ച്"</string>
     <string name="accessibility_captioning_footer_learn_more_content_description" msgid="5730040700677017706">"അടിക്കുറിപ്പ് മുൻഗണനകളെ കുറിച്ച് കൂടുതലറിയുക"</string>
@@ -2866,7 +2866,7 @@
     <string name="menu_stats_unplugged" msgid="7125297366200634285">"അൺപ്ലഗ്ഗുചെയ്‌തതിന് ശേഷമുള്ള <xliff:g id="UNPLUGGED">%1$s</xliff:g>"</string>
     <string name="menu_stats_last_unplugged" msgid="230678127178268655">"<xliff:g id="UNPLUGGED">%1$s</xliff:g> എന്നതിനായി അവസാനം പ്ലഗുചെയ്‌തത് മാറ്റിയപ്പോൾ"</string>
     <string name="menu_stats_total" msgid="2713445396954503670">"ആകെ ഉപയോഗങ്ങൾ"</string>
-    <string name="menu_stats_refresh" msgid="6727628139586938835">"പുതുക്കുക"</string>
+    <string name="menu_stats_refresh" msgid="6727628139586938835">"റീഫ്രഷ് ചെയ്യുക"</string>
     <string name="process_mediaserver_label" msgid="6135260215912215092">"മീഡിയ സെർവർ"</string>
     <string name="process_dex2oat_label" msgid="1190208677726583153">"ആപ്പ് ഓപ്റ്റിമൈസേഷന്‍"</string>
     <string name="battery_saver" msgid="7737147344510595864">"ബാറ്ററി ലാഭിക്കൽ"</string>
