--- a/res/values-pa/strings.xml
+++ b/res/values-pa/strings.xml
@@ -34,7 +34,7 @@
     <string name="header_category_system" msgid="1665516346845259058">"ਸਿਸਟਮ"</string>
     <string name="radioInfo_service_in" msgid="9088637745836646271">"ਸੇਵਾ ਵਿੱਚ"</string>
     <string name="radioInfo_service_out" msgid="1868347333892403287">"ਸੇਵਾ ਵਿੱਚ ਨਹੀਂ"</string>
-    <string name="radioInfo_service_emergency" msgid="6838935881091760942">"ਸਿਰਫ਼ ਸੰਕਟਕਾਲੀਨ ਕਾਲਾਂ"</string>
+    <string name="radioInfo_service_emergency" msgid="6838935881091760942">"ਸਿਰਫ਼ ਐਮਰਜੈਂਸੀ ਕਾਲਾਂ"</string>
     <string name="radioInfo_service_off" msgid="6184928420860868571">"ਰੇਡੀਓ ਬੰਦ"</string>
     <string name="radioInfo_roaming_in" msgid="8892550453644088692">"ਰੋਮਿੰਗ"</string>
     <string name="radioInfo_roaming_not" msgid="3137594549464975054">"ਰੋਮਿੰਗ ਨਹੀਂ"</string>
@@ -1327,7 +1327,7 @@
     <string name="auto_brightness_very_high_title" msgid="4935132626750630713">"ਬਹੁਤ ਉੱਚ"</string>
     <string name="auto_brightness_subtitle" msgid="6839449395639517870">"ਤੁਹਾਡਾ ਤਰਜੀਹੀ ਚਮਕ ਪੱਧਰ"</string>
     <string name="auto_brightness_off_summary" msgid="4993150980274474226">"ਉਪਲਬਧ ਲਾਈਟ ਲਈ ਵਿਵਸਥਿਤ ਨਾ ਕਰੋ"</string>
-    <string name="auto_brightness_very_high_summary" msgid="2784981315548144255">"ਬੈਟਰੀ ਵਰਤੋਂ ਵਧ ਜਾਵੇਗੀ"</string>
+    <string name="auto_brightness_very_high_summary" msgid="2784981315548144255">"ਬੈਟਰੀ ਵਰਤੋਂ ਵੱਧ ਜਾਵੇਗੀ"</string>
     <string name="auto_brightness_disclaimer" msgid="1868395832774087351">"ਉਪਲਬਧ ਲਾਈਟ ਲਈ ਚਮਕ ਦੇ ਪੱਧਰ ਨੂੰ ਸੁਯੋਗ ਬਣਾਓ। ਇਸ ਵਿਸ਼ੇਸ਼ਤਾ ਦੇ ਚਾਲੂ ਹੋਣ \'ਤੇ ਵੀ ਤੁਸੀਂ ਚਮਕ ਨੂੰ ਅਸਥਾਈ ਤੌਰ \'ਤੇ ਵਿਵਸਥਿਤ ਕਰ ਸਕਦੇ ਹੋ।"</string>
     <string name="auto_brightness_description" msgid="6807117118142381193">"ਤੁਹਾਡੀ ਸਕ੍ਰੀਨ ਦੀ ਚਮਕ ਸਵੈਚਲਿਤ ਤੌਰ \'ਤੇ ਵਾਤਾਵਰਨ ਅਤੇ ਤੁਹਾਡੇ ਵੱਲੋਂ ਕੀਤੀਆਂ ਜਾਣ ਵਾਲੀਆਂ ਸਰਗਰਮੀਆਂ ਦੇ ਮੁਤਾਬਕ ਵੱਧ-ਘੱਟ ਹੋਵੇਗੀ। ਅਡੈਪਟਿਵ ਬ੍ਰਾਈਟਨੈੱਸ ਨੂੰ ਤੁਹਾਡੀਆਂ ਤਰਜੀਹਾਂ ਬਾਰੇ ਸਿੱਖਣ ਵਿੱਚ ਮਦਦ ਕਰਨ ਲਈ ਤੁਸੀਂ ਸਲਾਈਡਰ ਨੂੰ ਹੱਥੀਂ ਹਿਲਾ ਸਕਦੇ ਹੋ।"</string>
     <string name="display_white_balance_title" msgid="2624544323029364713">"ਸਫ਼ੈਦ ਸੰਤੁਲਨ ਦਿਖਾਓ"</string>
@@ -1427,7 +1427,7 @@
     <string name="doze_title" msgid="1523090408230862316">"ਸੂਚਨਾਵਾਂ ਲਈ ਸਕ੍ਰੀਨ ਕਿਰਿਆਸ਼ੀਲ ਕਰੋ"</string>
     <string name="doze_summary" msgid="8252867381522942804">"ਜਦੋਂ ਸਕ੍ਰੀਨ ਗੂੜ੍ਹੀ ਹੁੰਦੀ ਹੈ, ਤਾਂ ਇਹ ਨਵੀਂਆਂ ਸੂਚਨਾਵਾਂ ਲਈ ਚਾਲੂ ਹੋ ਜਾਂਦੀ ਹੈ"</string>
     <string name="doze_always_on_title" msgid="7326245192352868477">"ਸਮਾਂ ਅਤੇ ਜਾਣਕਾਰੀ ਹਮੇਸ਼ਾਂ ਦਿਖਾਓ"</string>
-    <string name="doze_always_on_summary" msgid="509097829739647852">"ਬੈਟਰੀ ਵਰਤੋਂ ਵਧ ਜਾਵੇਗੀ"</string>
+    <string name="doze_always_on_summary" msgid="509097829739647852">"ਬੈਟਰੀ ਵਰਤੋਂ ਵੱਧ ਜਾਵੇਗੀ"</string>
     <string name="force_bold_text" msgid="4620929631102086716">"ਬੋਲਡ ਲਿਖਤ"</string>
     <string name="title_font_size" msgid="570613010306330622">"ਫੌਂਟ ਦਾ ਆਕਾਰ"</string>
     <string name="short_summary_font_size" msgid="184712645848458143">"ਲਿਖਤ ਨੂੰ ਵੱਡਾ ਜਾਂ ਛੋਟਾ ਕਰੋ"</string>
@@ -3520,7 +3520,7 @@
     <string name="app_and_notification_dashboard_summary" msgid="8047683010984186106">"ਹਾਲੀਆ ਐਪਾਂ, ਪੂਰਵ-ਨਿਰਧਾਰਤ ਐਪਾਂ"</string>
     <string name="notification_settings_work_profile" msgid="6076211850526353975">"ਕਾਰਜ ਪ੍ਰੋਫਾਈਲ ਵਿੱਚ ਐਪਾਂ ਲਈ ਸੂਚਨਾ ਪਹੁੰਚ ਉਪਲਬਧ ਨਹੀਂ ਹੈ।"</string>
     <string name="account_dashboard_title" msgid="8228773251948253914">"ਪਾਸਵਰਡ ਅਤੇ ਖਾਤੇ"</string>
-    <string name="account_dashboard_default_summary" msgid="1730719656099599488">"ਰੱਖਿਅਤ ਕੀਤੇ ਪਾਸਵਰਡ, ਆਟੋਫਿਲ, ਸਮਾਲੀਕਿਰਤ ਖਾਤੇ"</string>
+    <string name="account_dashboard_default_summary" msgid="1730719656099599488">"ਰੱਖਿਅਤ ਕੀਤੇ ਪਾਸਵਰਡ, ਆਟੋਫਿਲ, ਸਿੰਕ ਕੀਤੇ ਖਾਤੇ"</string>
     <string name="app_default_dashboard_title" msgid="4071015747629103216">"ਪੂਰਵ-ਨਿਰਧਾਰਿਤ ਐਪਾਂ"</string>
     <string name="system_dashboard_summary" msgid="7400745270362833832">"ਭਾਸ਼ਾਵਾਂ, ਇਸ਼ਾਰੇ, ਸਮਾਂ, ਬੈਕਅੱਪ"</string>
     <string name="search_results_title" msgid="3360639917793022533">"ਸੈਟਿੰਗਾਂ"</string>
@@ -3678,14 +3678,14 @@
     <string name="zen_mode_settings_category" msgid="3794956668816783447">"ਧੁਨੀ ਵਜਾਉਣ ਵਾਲੀਆਂ ਰੁਕਾਵਟਾਂ ਨੂੰ ਆਗਿਆ ਦਿਓ"</string>
     <string name="zen_mode_visual_interruptions_settings_title" msgid="7806181124566937214">"ਦ੍ਰਿਸ਼ਟੀਗਤ ਗੜਬੜੀਆਂ ਬਲਾਕ ਕਰੋ"</string>
     <string name="zen_mode_visual_signals_settings_subtitle" msgid="7433077540895876672">"ਦ੍ਰਿਸ਼ਟੀਗਤ ਸਿਗਨਲ ਦਿਖਣ ਦਿਓ"</string>
-    <string name="zen_mode_restrict_notifications_title" msgid="4169952466106040297">"ਲੁਕੀਆਂ ਹੋਈਆਂ ਸੂਚਨਾਵਾਂ ਨੂੰ ਦਿਖਾਉਣ ਸਬੰਧੀ ਵਿਕਲਪ"</string>
+    <string name="zen_mode_restrict_notifications_title" msgid="4169952466106040297">"ਲੁਕੀਆਂ ਹੋਈਆਂ ਸੂਚਨਾਵਾਂ ਨੂੰ ਦਿਖਾਉਣ ਸੰਬੰਧੀ ਵਿਕਲਪ"</string>
     <string name="zen_mode_restrict_notifications_category" msgid="5870944770935394566">"\'ਪਰੇਸ਼ਾਨ ਨਾ ਕਰੋ\' ਦੇ ਚਾਲੂ ਹੋਣ \'ਤੇ"</string>
     <string name="zen_mode_restrict_notifications_mute" msgid="6692072837485018287">"ਸੂਚਨਾਵਾਂ ਦੀ ਕੋਈ ਧੁਨੀ ਨਹੀਂ"</string>
     <string name="zen_mode_restrict_notifications_mute_summary" msgid="966597459849580949">"ਤੁਸੀਂ ਆਪਣੀ ਸਕ੍ਰੀਨ \'ਤੇ ਸੂਚਨਾਵਾਂ ਦੇਖੋਗੇ"</string>
-    <string name="zen_mode_restrict_notifications_mute_footer" msgid="2152115038156049608">"ਸੂਚਨਾਵਾਂ ਆਉਣ \'ਤੇ ਤੁਹਾਡਾ ਫ਼ੋਨ ਕੋਈ ਧੁਨੀ ਨਹੀਂ ਵਜਾਵੇਗਾ ਜਾਂ ਥਰਥਰਾਹਟ ਨਹੀਂ ਕਰੇਗਾ।"</string>
+    <string name="zen_mode_restrict_notifications_mute_footer" msgid="2152115038156049608">"ਸੂਚਨਾਵਾਂ ਆਉਣ \'ਤੇ ਤੁਹਾਡਾ ਫ਼ੋਨ ਕੋਈ ਧੁਨੀ ਨਹੀਂ ਵਜਾਏਗਾ ਜਾਂ ਥਰਥਰਾਹਟ ਨਹੀਂ ਕਰੇਗਾ।"</string>
     <string name="zen_mode_restrict_notifications_hide" msgid="5997930361607752541">"ਸੂਚਨਾਵਾਂ ਦੇ ਕੋਈ ਦ੍ਰਿਸ਼ਟੀਗਤ ਸੰਕੇਤ ਜਾਂ ਧੁਨੀ ਨਹੀਂ"</string>
     <string name="zen_mode_restrict_notifications_hide_summary" msgid="6005445725686969583">"ਤੁਹਾਨੂੰ ਸੂਚਨਾਵਾਂ ਨਾ ਹੀ ਦਿਸਣਗੀਆਂ ਅਤੇ ਨਾ ਹੀ ਸੁਣਨਗੀਆਂ"</string>
-    <string name="zen_mode_restrict_notifications_hide_footer" msgid="4314772315731485747">"ਤੁਹਾਡਾ ਫ਼ੋਨ ਨਵੀਆਂ ਜਾਂ ਮੌਜੂਦਾ ਸੂਚਨਾਵਾਂ ਨਹੀਂ ਦਿਖਾਵੇਗਾ, ਉਹਨਾਂ ਲਈ ਥਰਥਰਾਹਟ ਨਹੀਂ ਕਰੇਗਾ ਜਾਂ ਧੁਨੀ ਨਹੀਂ ਵਜਾਵੇਗਾ। ਧਿਆਨ ਵਿੱਚ ਰੱਖੋ, ਫ਼ੋਨ ਸਰਗਰਮੀ ਅਤੇ ਸਥਿਤੀ ਦੀਆਂ ਅਤਿ ਜ਼ਰੂਰੀ ਸੂਚਨਾਵਾਂ ਹਾਲੇ ਵੀ ਦਿਸਣਗੀਆਂ।\n\nਜਦੋਂ ਤੁਸੀਂ \'ਪਰੇਸ਼ਾਨ ਨਾ ਕਰੋ\' ਨੂੰ ਬੰਦ ਕਰੋਗੇ, ਤਾਂ ਤੁਹਾਡੀ ਸਕ੍ਰੀਨ ਨੂੰ ਉੱਪਰੋਂ ਥੱਲੇ ਵੱਲ ਸਵਾਈਪ ਕਰਨ \'ਤੇ ਖੁੰਝੀਆਂ ਸੂਚਨਾਵਾਂ ਦਿਸਣਗੀਆਂ।"</string>
+    <string name="zen_mode_restrict_notifications_hide_footer" msgid="4314772315731485747">"ਤੁਹਾਡਾ ਫ਼ੋਨ ਨਵੀਆਂ ਜਾਂ ਮੌਜੂਦਾ ਸੂਚਨਾਵਾਂ ਨਹੀਂ ਦਿਖਾਵੇਗਾ, ਉਨ੍ਹਾਂ ਲਈ ਥਰਥਰਾਹਟ ਨਹੀਂ ਕਰੇਗਾ ਜਾਂ ਧੁਨੀ ਨਹੀਂ ਵਜਾਏਗਾ। ਧਿਆਨ ਵਿੱਚ ਰੱਖੋ, ਫ਼ੋਨ ਸਰਗਰਮੀ ਅਤੇ ਸਥਿਤੀ ਦੀਆਂ ਅਤਿ ਜ਼ਰੂਰੀ ਸੂਚਨਾਵਾਂ ਹਾਲੇ ਵੀ ਦਿਸਣਗੀਆਂ।\n\nਜਦੋਂ ਤੁਸੀਂ \'ਪਰੇਸ਼ਾਨ ਨਾ ਕਰੋ\' ਨੂੰ ਬੰਦ ਕਰੋਗੇ, ਤਾਂ ਤੁਹਾਡੀ ਸਕ੍ਰੀਨ ਨੂੰ ਉੱਪਰੋਂ ਥੱਲੇ ਵੱਲ ਸਵਾਈਪ ਕਰਨ \'ਤੇ ਖੁੰਝੀਆਂ ਸੂਚਨਾਵਾਂ ਦਿਸਣਗੀਆਂ।"</string>
     <string name="zen_mode_restrict_notifications_custom" msgid="5469078057954463796">"ਵਿਉਂਤਬੱਧ"</string>
     <string name="zen_mode_restrict_notifications_enable_custom" msgid="4303255634151330401">"ਵਿਉਂਤੀ ਸੈਟਿੰਗ ਚਾਲੂ ਕਰੋ"</string>
     <string name="zen_mode_restrict_notifications_disable_custom" msgid="5062332754972217218">"ਵਿਉਂਤੀ ਸੈਟਿੰਗ ਹਟਾਓ"</string>
@@ -4102,7 +4102,7 @@
     <string name="zen_mode_calls" msgid="7653245854493631095">"ਕਾਲਾਂ"</string>
     <string name="zen_mode_calls_list" msgid="5044730950895749093">"ਕਾਲਾਂ"</string>
     <string name="zen_mode_calls_header" msgid="8379225445095856726">"ਕਾਲਾਂ ਜੋ ਵਿਘਨ ਪਾ ਸਕਦੀਆਂ ਹਨ"</string>
-    <string name="zen_mode_calls_footer" msgid="2008079711083701243">"ਇਹ ਪੱਕਾ ਕਰਨ ਲਈ ਕਿ ਮਨਜ਼ੂਰਸ਼ੁਦਾ ਕਾਲਾਂ ਲਈ ਧੁਨੀ ਵਜਦੀ ਹੈ, ਜਾਂਚ ਕਰੋ ਕਿ ਤੁਹਾਡਾ ਡੀਵਾਈਸ ਘੰਟੀ \'ਤੇ ਸੈੱਟ ਹੈ"</string>
+    <string name="zen_mode_calls_footer" msgid="2008079711083701243">"ਇਹ ਪੱਕਾ ਕਰਨ ਲਈ ਕਿ ਮਨਜ਼ੂਰਸ਼ੁਦਾ ਕਾਲਾਂ ਲਈ ਧੁਨੀ ਵੱਜਦੀ ਹੈ, ਜਾਂਚ ਕਰੋ ਕਿ ਤੁਹਾਡਾ ਡੀਵਾਈਸ ਘੰਟੀ \'ਤੇ ਸੈੱਟ ਹੈ"</string>
     <string name="zen_mode_custom_calls_footer" msgid="6521283204577441053">"‘<xliff:g id="SCHEDULE_NAME">%1$s</xliff:g>’ ਲਈ ਇਨਕਮਿੰਗ ਕਾਲਾਂ ਬਲਾਕ ਕੀਤੀਆਂ ਗਈਆਂ ਹਨ। ਤੁਸੀਂ ਆਪਣੇ ਦੋਸਤਾਂ, ਪਰਿਵਾਰਕ ਮੈਂਬਰਾਂ ਜਾਂ ਹੋਰ ਸੰਪਰਕਾਂ ਨੂੰ ਤੁਹਾਨੂੰ ਸੰਪਰਕ ਕਰਨ ਦੇਣ ਲਈ ਸੈਟਿੰਗਾਂ ਨੂੰ ਵਿਵਸਥਿਤ ਕਰ ਸਕਦੇ ਹੋ।"</string>
     <string name="zen_mode_starred_contacts_title" msgid="630299631659575589">"ਤਾਰਾਬੱਧ ਸੰਪਰਕ"</string>
     <string name="zen_mode_starred_contacts_summary_contacts" msgid="1629467178444895094">"{count,plural,offset:2 =0{ਕੋਈ ਨਹੀਂ}=1{{contact_1}}=2{{contact_1} ਅਤੇ {contact_2}}=3{{contact_1}, {contact_2}, ਅਤੇ {contact_3}}other{{contact_1}, {contact_2}, ਅਤੇ # ਹੋਰ}}"</string>
