--- a/res/values-uz/strings.xml
+++ b/res/values-uz/strings.xml
@@ -2266,7 +2266,7 @@
     <string name="accessibility_settings" msgid="4713215774904704682">"Maxsus imkoniyatlar"</string>
     <string name="accessibility_settings_title" msgid="6739115703615065716">"Qulayliklar sozlamalari"</string>
     <string name="accessibility_settings_summary" msgid="2366627644570558503">"Displey, taʼsir, audio"</string>
-    <string name="vision_settings_title" msgid="8919983801864103069">"Maxsus imkoniyatlar"</string>
+    <string name="vision_settings_title" msgid="8919983801864103069">"Koʻrish sozlamalari"</string>
     <string name="vision_settings_description" msgid="7614894785054441991">"Qurilmangizdan qulay foydalanish uchun maxsus imkoniyatlardan foydalaning. Bu parametrlarni keyinroq sozlamalar orqali o‘zgartirish mumkin."</string>
     <string name="vision_settings_suggestion_title" msgid="4689275412658803919">"Shrift o‘lchamini o‘zgartiring"</string>
     <string name="screen_reader_category_title" msgid="5825700839731107803">"Ekrandan oʻqish vositasi"</string>
