--- a/res/values-in/strings.xml
+++ b/res/values-in/strings.xml
@@ -313,7 +313,7 @@
     <string name="encryption_and_credential_settings_summary" product="tablet" msgid="3776741531205406800">"Perangkat dienkripsi"</string>
     <string name="decryption_settings_summary" product="tablet" msgid="1864963068216544631">"Perangkat tidak dienkripsi"</string>
     <string name="lockscreen_settings_title" msgid="4086121748092341549">"Layar kunci"</string>
-    <string name="lockscreen_settings_what_to_show_category" msgid="9205490627927741254">"Untuk ditampilkan"</string>
+    <string name="lockscreen_settings_what_to_show_category" msgid="9205490627927741254">"Elemen yang ditampilkan"</string>
     <string name="security_settings_summary" msgid="1627059516127354233">"Setel Lokasiku, pembuka kunci layar, kunci kartu SIM, kunci penyimpanan kredensial"</string>
     <string name="cdma_security_settings_summary" msgid="2455517905101186330">"Setel Lokasiku, pembuka kunci layar, kunci penyimpanan kredensial"</string>
     <string name="security_passwords_title" msgid="4154420930973818581">"Privasi"</string>
@@ -1298,7 +1298,7 @@
     <string name="auto_rotate_switch_face_based" msgid="7824467067774120000">"Aktifkan Deteksi Wajah"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"Warna"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Alami"</string>
-    <string name="color_mode_option_boosted" msgid="4698797857766774289">"Ditingkatkan"</string>
+    <string name="color_mode_option_boosted" msgid="4698797857766774289">"Dipertajam"</string>
     <string name="color_mode_option_saturated" msgid="3413853820158447300">"Disaturasi"</string>
     <string name="color_mode_option_automatic" msgid="2281217686509980870">"Adaptif"</string>
     <string name="color_mode_summary_natural" msgid="8298840714001791628">"Gunakan hanya warna yang akurat"</string>
@@ -1343,7 +1343,7 @@
     <string name="adaptive_sleep_summary_no_permission" msgid="5822591289468803691">"Perlu akses kamera untuk fokus ke layar. Ketuk guna mengelola izin untuk Layanan Personalisasi Perangkat"</string>
     <string name="adaptive_sleep_manage_permission_button" msgid="1404510197847664846">"Kelola izin"</string>
     <string name="adaptive_sleep_description" msgid="1835321775327187860">"Mencegah layar mati jika Anda sedang melihatnya"</string>
-    <string name="adaptive_sleep_privacy" msgid="7664570136417980556">"Fitur fokus ke layar menggunakan kamera depan untuk mengetahui apakah seseorang sedang melihat layar. Fitur ini berjalan di perangkat, dan gambar tidak pernah disimpan atau dikirimkan ke Google."</string>
+    <string name="adaptive_sleep_privacy" msgid="7664570136417980556">"Fitur fokus ke layar menggunakan kamera depan untuk mengetahui apakah seseorang sedang melihat layar. Fitur ini berjalan di perangkat, dan gambar tidak pernah disimpan atau dikirim ke Google."</string>
     <string name="adaptive_sleep_contextual_slice_title" msgid="7467588613212629758">"Aktifkan fokus ke layar"</string>
     <string name="adaptive_sleep_contextual_slice_summary" msgid="2993867044745446094">"Buat layar tetap menyala saat dilihat"</string>
     <string name="auto_rotate_camera_lock_title" msgid="5369003176695105872">"Kamera dikunci"</string>
@@ -1363,7 +1363,7 @@
     <string name="night_display_temperature_title" msgid="857248782470764263">"Intensitas"</string>
     <string name="night_display_summary_off_auto_mode_never" msgid="7406899634169354142">"Tidak akan aktif otomatis"</string>
     <string name="night_display_summary_off_auto_mode_custom" msgid="6667008039080687931">"Akan aktif otomatis pada <xliff:g id="ID_1">%1$s</xliff:g>"</string>
-    <string name="night_display_summary_off_auto_mode_twilight" msgid="3669132200611324994">"Akan aktif otomatis saat matahari terbenam"</string>
+    <string name="night_display_summary_off_auto_mode_twilight" msgid="3669132200611324994">"Akan aktif otomatis saat malam"</string>
     <string name="night_display_summary_on_auto_mode_never" msgid="832333009202889350">"Tidak akan nonaktif otomatis"</string>
     <string name="night_display_summary_on_auto_mode_custom" msgid="2096677025343425755">"Akan nonaktif otomatis pukul <xliff:g id="ID_1">%1$s</xliff:g>"</string>
     <string name="night_display_summary_on_auto_mode_twilight" msgid="8070517472000680361">"Akan nonaktif otomatis saat matahari terbit"</string>
@@ -1408,7 +1408,7 @@
     <string name="wallpaper_settings_fragment_title" msgid="8445963841717633149">"Pilih wallpaper dari"</string>
     <string name="style_suggestion_title" msgid="1213747484782364775">"Sesuaikan ponsel Anda"</string>
     <string name="style_suggestion_summary" msgid="4271131877800968159">"Coba wallpaper dan gaya yang berbeda, serta banyak lagi"</string>
-    <string name="screensaver_settings_title" msgid="3588535639672365395">"Screen saver"</string>
+    <string name="screensaver_settings_title" msgid="3588535639672365395">"Screensaver"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"Saat mengisi baterai atau dipasang ke dok"</string>
     <string name="screensaver_settings_summary_either_short" msgid="2126139984738506920">"Keduanya"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"Saat mengisi baterai"</string>
@@ -1417,7 +1417,7 @@
     <string name="screensaver_settings_summary_off" msgid="8720357504939106923">"Mati"</string>
     <string name="screensaver_settings_disabled_prompt" msgid="1166343194760238835">"Untuk mengontrol yang terjadi saat ponsel dipasang ke dok dan/atau sedang tidur, aktifkan screen saver."</string>
     <string name="screensaver_settings_when_to_dream" msgid="8145025742428940520">"Waktu mulai"</string>
-    <string name="screensaver_settings_current" msgid="390472865895976891">"Screen saver saat ini"</string>
+    <string name="screensaver_settings_current" msgid="390472865895976891">"Screensaver saat ini"</string>
     <string name="screensaver_settings_dream_start" msgid="6486360145976995856">"Mulai sekarang"</string>
     <string name="screensaver_settings_button" msgid="6159236558934930238">"Setelan"</string>
     <string name="automatic_brightness" msgid="4599827881929079513">"Kecerahan otomatis"</string>
@@ -3731,7 +3731,7 @@
     <string name="zen_mode_duration_summary_time_hours" msgid="2602655749780428308">"{count,plural, =1{1 jam}other{# jam}}"</string>
     <string name="zen_mode_duration_summary_time_minutes" msgid="5755536844016835693">"{count,plural, =1{1 menit}other{# menit}}"</string>
     <string name="zen_mode_sound_summary_off" msgid="7350437977839985836">"{count,plural, =0{Nonaktif}=1{Nonaktif / 1 jadwal dapat aktif otomatis}other{Nonaktif / # jadwal dapat aktif otomatis}}"</string>
-    <string name="zen_category_behavior" msgid="3214056473947178507">"Apa yang dapat mengganggu fitur Jangan Ganggu"</string>
+    <string name="zen_category_behavior" msgid="3214056473947178507">"Apa yang dapat mengganggu mode Jangan Ganggu"</string>
     <string name="zen_category_people" msgid="8252926021894933047">"Orang"</string>
     <string name="zen_category_apps" msgid="1167374545618451925">"Aplikasi"</string>
     <string name="zen_category_exceptions" msgid="1316097981052752811">"Alarm &amp; gangguan lainnya"</string>
@@ -3787,7 +3787,7 @@
     <string name="asst_importance_reset_title" msgid="6191265591976440115">"Reset tingkat kepentingan notifikasi"</string>
     <string name="asst_importance_reset_summary" msgid="684794589254282667">"Reset setelan penting yang diubah pengguna dan izinkan asisten notifikasi diprioritaskan"</string>
     <string name="asst_capabilities_actions_replies_title" msgid="4392470465646394289">"Saran tindakan dan balasan"</string>
-    <string name="asst_capabilities_actions_replies_summary" msgid="416234323365645871">"Otomatis tampilkan saran tindakan &amp; balasan"</string>
+    <string name="asst_capabilities_actions_replies_summary" msgid="416234323365645871">"Otomatis menampilkan saran tindakan &amp; balasan"</string>
     <string name="notification_history_summary" msgid="5434741516307706892">"Tampilkan notifikasi baru-baru ini dan yang ditunda"</string>
     <string name="notification_history" msgid="8663811361243456201">"Histori notifikasi"</string>
     <string name="notification_history_toggle" msgid="9093762294928569030">"Gunakan histori notifikasi"</string>
@@ -4101,7 +4101,7 @@
     <string name="zen_mode_calls_title" msgid="2078578043677037740">"Panggilan telepon"</string>
     <string name="zen_mode_calls" msgid="7653245854493631095">"Panggilan telepon"</string>
     <string name="zen_mode_calls_list" msgid="5044730950895749093">"panggilan telepon"</string>
-    <string name="zen_mode_calls_header" msgid="8379225445095856726">"Panggilan telepon yang dapat mengganggu"</string>
+    <string name="zen_mode_calls_header" msgid="8379225445095856726">"Panggilan telepon yang diizinkan masuk"</string>
     <string name="zen_mode_calls_footer" msgid="2008079711083701243">"Untuk memastikan panggilan yang diizinkan mengeluarkan suara, pastikan perangkat disetel untuk berdering"</string>
     <string name="zen_mode_custom_calls_footer" msgid="6521283204577441053">"Untuk ‘<xliff:g id="SCHEDULE_NAME">%1$s</xliff:g>’, panggilan masuk akan diblokir. Anda dapat menyesuaikan setelan untuk mengizinkan teman, keluarga, atau kontak lain menghubungi Anda."</string>
     <string name="zen_mode_starred_contacts_title" msgid="630299631659575589">"Kontak berbintang"</string>
@@ -4110,11 +4110,11 @@
     <string name="zen_mode_messages" msgid="7315084748885170585">"Pesan"</string>
     <string name="zen_mode_messages_list" msgid="5431014101342361882">"pesan"</string>
     <string name="zen_mode_messages_title" msgid="1777598523485334405">"Pesan"</string>
-    <string name="zen_mode_messages_header" msgid="253721635061451577">"Pesan yang dapat mengganggu"</string>
+    <string name="zen_mode_messages_header" msgid="253721635061451577">"Pesan yang diizinkan masuk"</string>
     <string name="zen_mode_messages_footer" msgid="6002468050854126331">"Untuk memastikan pesan yang diizinkan mengeluarkan suara, pastikan perangkat disetel untuk berdering"</string>
     <string name="zen_mode_custom_messages_footer" msgid="7545180036949550830">"Untuk ‘<xliff:g id="SCHEDULE_NAME">%1$s</xliff:g>’, pesan masuk akan diblokir. Anda dapat menyesuaikan setelan untuk mengizinkan teman, keluarga, atau kontak lain menghubungi Anda."</string>
     <string name="zen_mode_all_messages_summary" msgid="3756267858343104554">"Semua pesan dapat ditampilkan"</string>
-    <string name="zen_mode_all_calls_summary" msgid="7337907849083824698">"Semua panggilan dapat ditampilkan"</string>
+    <string name="zen_mode_all_calls_summary" msgid="7337907849083824698">"Semua panggilan akan dihubungkan"</string>
     <string name="zen_mode_contacts_count" msgid="6568631261119795799">"{count,plural, =0{Tidak ada}=1{1 kontak}other{# kontak}}"</string>
     <string name="zen_mode_from_anyone" msgid="6027004263046694174">"Siapa saja"</string>
     <string name="zen_mode_from_contacts" msgid="2989933306317064818">"Kontak"</string>
@@ -5428,7 +5428,7 @@
     <string name="power_menu_long_press_for_assist_sensitivity_summary" msgid="7550610071666801935">"Sesuaikan sensitivitas dengan memilih durasi menekan &amp; menahan tombol daya"</string>
     <string name="power_menu_long_press_for_assist_sensitivity_low_label" msgid="3430099983480845635">"Singkat"</string>
     <string name="power_menu_long_press_for_assist_sensitivity_high_label" msgid="2059686170350829156">"Lama"</string>
-    <string name="lockscreen_privacy_wallet_setting_toggle" msgid="4188327143734192000">"Tampilkan dompet"</string>
+    <string name="lockscreen_privacy_wallet_setting_toggle" msgid="4188327143734192000">"Tampilkan Wallet"</string>
     <string name="lockscreen_privacy_wallet_summary" msgid="5388868513484652431">"Izinkan akses ke dompet dari layar kunci dan setelan cepat"</string>
     <string name="lockscreen_privacy_controls_setting_toggle" msgid="7445725343949588613">"Tampilkan kontrol perangkat"</string>
     <string name="lockscreen_privacy_controls_summary" msgid="6952176547084269909">"Kontrol akses saat terkunci"</string>
@@ -5540,7 +5540,7 @@
     <string name="night_light_main_switch_title" msgid="3428298022467805219">"Gunakan Cahaya Malam"</string>
     <string name="nfc_main_switch_title" msgid="6295839988954817432">"Gunakan NFC"</string>
     <string name="adaptive_battery_main_switch_title" msgid="3127477920505485813">"Menggunakan baterai adaptif"</string>
-    <string name="adaptive_brightness_main_switch_title" msgid="2681666805191642737">"Menggunakan kecerahan adaptif"</string>
+    <string name="adaptive_brightness_main_switch_title" msgid="2681666805191642737">"Gunakan kecerahan adaptif"</string>
     <string name="wifi_calling_main_switch_title" msgid="4070224008346815634">"Menggunakan panggilan Wi-Fi"</string>
     <string name="default_see_all_apps_title" msgid="7481113230662612178">"Lihat semua aplikasi"</string>
     <string name="smart_forwarding_title" msgid="8368634861971949799">"Smart Forwarding"</string>
