--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -793,10 +793,10 @@
     <string name="lockpattern_tutorial_continue_label" msgid="1329049481210689408">"次へ"</string>
     <string name="lock_setup" msgid="4622999020926280737">"設定が完了しました。"</string>
     <string name="manage_device_admin" msgid="1044620606203916275">"デバイス管理アプリ"</string>
-    <string name="number_of_device_admins_none" msgid="152926922020437312">"アクティブなアプリはありません"</string>
+    <string name="number_of_device_admins_none" msgid="152926922020437312">"実行中のアプリはありません"</string>
     <plurals name="number_of_device_admins" formatted="false" msgid="2528735319390151989">
-      <item quantity="other">有効なアプリ: <xliff:g id="COUNT_1">%d</xliff:g> 個</item>
-      <item quantity="one">有効なアプリ: <xliff:g id="COUNT_0">%d</xliff:g> 個</item>
+      <item quantity="other">実行中のアプリ: <xliff:g id="COUNT_1">%d</xliff:g> 個</item>
+      <item quantity="one">実行中のアプリ: <xliff:g id="COUNT_0">%d</xliff:g> 個</item>
     </plurals>
     <string name="manage_trust_agents" msgid="6410149930029992356">"信頼エージェント"</string>
     <string name="disabled_because_no_backup_security" msgid="4998095356607488854">"使用するには、まず画面ロックを設定してください"</string>
@@ -2886,7 +2886,7 @@
     <!-- no translation found for battery_saver_seekbar_title (3712266470054006641) -->
     <skip />
     <string name="battery_saver_seekbar_title_placeholder" msgid="7141264642540687540">"ON にする"</string>
-    <string name="battery_saver_master_switch_title" msgid="3474312070095834915">"バッテリー セーバーの使用"</string>
+    <string name="battery_saver_master_switch_title" msgid="3474312070095834915">"バッテリー セーバーを使用する"</string>
     <string name="battery_saver_turn_on_automatically_title" msgid="7857393318205740864">"自動的にON"</string>
     <string name="battery_saver_turn_on_automatically_never" msgid="6194649389871448663">"使用しない"</string>
     <string name="battery_saver_turn_on_automatically_pct" msgid="4294335680892392449">"バッテリー残量が <xliff:g id="PERCENT">%1$s</xliff:g> になったとき"</string>
