--- a/res/values-vi/strings.xml
+++ b/res/values-vi/strings.xml
@@ -4377,7 +4377,7 @@
     <string name="default_phone_title" msgid="7616730756650803827">"Ứng dụng điện thoại"</string>
     <string name="default_app" msgid="445053777504688596">"(Mặc định)"</string>
     <string name="system_app" msgid="1863291702508355041">"(Hệ thống)"</string>
-    <string name="system_default_app" msgid="2647834628622214931">"(Mặc định của hệ thống)"</string>
+    <string name="system_default_app" msgid="2647834628622214931">"(Theo chế độ mặc định của hệ thống)"</string>
     <string name="apps_storage" msgid="643866814746927111">"Bộ nhớ ứng dụng"</string>
     <string name="usage_access" msgid="5487993885373893282">"Truy cập dữ liệu sử dụng"</string>
     <string name="permit_usage_access" msgid="179630895262172674">"Cho phép truy cập dữ liệu sử dụng"</string>
@@ -5334,7 +5334,7 @@
     <string name="network_connection_connect_successful" msgid="2587314077675642476">"Kết nối thành công"</string>
     <string name="network_connection_connect_failure" msgid="6803313816657494319">"Không kết nối được"</string>
     <string name="network_connection_request_dialog_showall" msgid="6392059758456994944">"Hiển thị tất cả"</string>
-    <string name="network_connection_searching_message" msgid="8521819623516926482">"Đang tìm kiếm thiết bị..."</string>
+    <string name="network_connection_searching_message" msgid="8521819623516926482">"Đang tìm thiết bị..."</string>
     <string name="network_connection_connecting_message" msgid="433189540877274889">"Đang kết nối với thiết bị..."</string>
     <string name="bluetooth_left_name" msgid="7440064067910080502">"Trái"</string>
     <string name="bluetooth_right_name" msgid="7588088072444124949">"Phải"</string>
@@ -5412,7 +5412,7 @@
     <string name="bug_report_handler_picker_footer_text" msgid="4935758328366585673">"Xác định ứng dụng nào xử lý phím tắt Báo cáo lỗi trên thiết bị của bạn."</string>
     <string name="personal_profile_app_subtext" msgid="5586060806997067676">"Cá nhân"</string>
     <string name="work_profile_app_subtext" msgid="5043419461440127879">"Cơ quan"</string>
-    <string name="system_default_app_subtext" msgid="5212055189703164839">"Giá trị mặc định của hệ thống"</string>
+    <string name="system_default_app_subtext" msgid="5212055189703164839">"Theo chế độ mặc định của hệ thống"</string>
     <string name="select_invalid_bug_report_handler_toast_text" msgid="8857326334015386692">"Lựa chọn này không còn hợp lệ nữa. Hãy thử lại."</string>
     <string name="quick_controls_lower" msgid="6675573610027367819">"tùy chọn điều khiển thiết bị"</string>
     <string name="cards_passes_sentence" msgid="1866311782387946944">"Thẻ và vé"</string>
