--- a/res/values-zu/strings.xml
+++ b/res/values-zu/strings.xml
@@ -4146,7 +4146,7 @@
     <string name="zen_mode_events_list" msgid="7191316245742097229">"imicimbi"</string>
     <string name="zen_mode_events_list_first" msgid="7425369082835214361">"Imicimbi"</string>
     <string name="zen_mode_bypassing_apps" msgid="625309443389126481">"Vumela izinhlelo zokusebenza ukubhala ngaphezulu"</string>
-    <string name="zen_mode_bypassing_apps_header" msgid="60083006963906906">"Izinhlelo zokusebenza ezingaphazamisa"</string>
+    <string name="zen_mode_bypassing_apps_header" msgid="60083006963906906">"Ama-app angaphazamisa"</string>
     <string name="zen_mode_bypassing_apps_add_header" msgid="3201829605075172536">"Khetha izinhlelo zokusebenza eziningi"</string>
     <string name="zen_mode_bypassing_apps_none" msgid="7944221631721778096">"Azikho izinhlelo zokusebenza ezikhethiwe"</string>
     <string name="zen_mode_bypassing_apps_subtext_none" msgid="5128770411598722200">"Azikho izinhlelo zokusebenza ezingaphazamisa"</string>
